--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/chingu-voyage4/Bears-Team-13"
   },
   "author": "",
-  "license": "ISC",
+  "license": "ISC"
 }
