fixed main start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run server",
     "server": "npm run start --prefix server"
   },
   "repository": {
