Added CORS untill Proxy

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.6",
     "nodemon": "^1.15.1"
