--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.6",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
