--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
@@ -18,5 +21,8 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "babel-preset-es2017": "^6.24.1"
+  }
 }
