--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "font-awesome": "^4.7.0",
     "immutability-helper": "^2.6.6",
     "moment": "^2.20.1",
     "react": "^16.2.0",
